# src/main/kotlin/it/docaliassicurazioni/v1/routes/UserRoutes.kt
@@ -9,11 +9,17 @@ import it.docaliassicurazioni.cache.RedisClient
 import it.docaliassicurazioni.data.SessionID
 import it.docaliassicurazioni.database.MongoDBClient
 
-fun Route.userRoute() {
+fun Route.userRoutes() {
     get("/user") {
         val sessionID = call.sessions.get<SessionID>()!!.id
         val sessionData = RedisClient.getSession(sessionID)
         val user = MongoDBClient.getUser(sessionData.email)
         call.respond(HttpStatusCode.OK, user)
+    }
+
+    get("/logout") {
+        val sessionID = call.sessions.get<SessionID>()!!.id
+        RedisClient.deleteSession(sessionID)
+        call.respond(HttpStatusCode.OK)
     }
 }
